Fixed JDK requirements